added flow for the product listing page and explicit wait

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="functionalTests.NewTest" class="method navigator-link" hash-for-method="userlogin">userlogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="functionalTests.NewTest" class="method navigator-link" hash-for-method="addEarphonesTocart">addEarphonesTocart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="userlogin">
-                  </a> <!-- userlogin -->
-                  <span class="method-name">userlogin</span>
+                  <a name="addEarphonesTocart">
+                  </a> <!-- addEarphonesTocart -->
+                  <span class="method-name">addEarphonesTocart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/1s/mctvx8hx0q39q8p066_1vbkm0000gr/T/testng-eclipse-1817250937/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/1s/mctvx8hx0q39q8p066_1vbkm0000gr/T/testng-eclipse-1153504227/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userlogin')
+data.setCell(0, 1, 'addEarphonesTocart')
 data.setCell(0, 2, 'functionalTests.NewTest')
-data.setCell(0, 3, 8964);
+data.setCell(0, 3, 6464);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,13 +208,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">functionalTests.NewTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">userSearchesaString</span>
+                <br/>
+                <span class="ignored-method-name">userlogin</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -232,12 +234,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">userlogin</span>
-                <span class="method-start">6064 ms</span>
+                <span class="method-name">addEarphonesTocart</span>
+                <span class="method-start">7260 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">15033 ms</span>
+                <span class="method-start">13730 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
