--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,4 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>functionalTests.NewTest.userSearchesaString</td></tr>
+<tr><td>functionalTests.NewTest.userlogin</td></tr>
 </table>
